--- a/web/index.html
+++ b/web/index.html
@@ -13,30 +13,12 @@
   <meta name="theme-color" content="#ffffff">
   <meta name="referrer" content="origin-when-cross-origin" />
   <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
-  <title>BingAI - 聊天</title>
+  <title>BingAI - SW聊天</title>
   <!-- <script src="https://unpkg.com/vconsole@latest/dist/vconsole.min.js"></script>
   <script>
     var vConsole = new window.VConsole();
   </script> -->
-  <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-MM5J5X8QQC"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag () { dataLayer.push(arguments); }
-    gtag('js', new Date());
-
-    gtag('config', 'G-MM5J5X8QQC');
-  </script>
-  <!-- 百度统计 -->
-  <script>
-    var _hmt = _hmt || [];
-    (function () {
-      var hm = document.createElement("script");
-      hm.src = "https://hm.baidu.com/hm.js?299c614daa53fbcede70f2d22df0a31b";
-      var s = document.getElementsByTagName("script")[0];
-      s.parentNode.insertBefore(hm, s);
-    })();
-  </script>
+  
   <script src="/web/js/bing/chat/global.js"></script>
   <script src="/web/js/bing/chat/amd.js"></script>
   <script src="/web/js/bing/chat/config.js"></script>
@@ -50,7 +32,7 @@
   <div id="sydWelcomeTemplate">
     <div id="b_sydWelcomeTemplate" class="b_wlcmCont" data-priority="2" style="margin-top: 66px;">
       <div class="b_wlcmHdr"><div class="b_wlcmLogo"></div>
-      <div class="b_wlcmDesc">必应是由 AI 支持的 Web Copilot</div>
+      <div class="b_wlcmDesc">必应是由 swAI 支持的 Web Copilot</div>
     </div>
     <div class="b_wlcmTileCont b_wlcmTileContConsumer"></div>
   </div>
@@ -59,6 +41,7 @@
     <div id="b_sydBgCover"></div>
   </div>
   <script src="/web/js/bing/chat/core.js"></script>
+    <script src="/rp/i_z8hgmoir53hvshQQoyF7vDrYc.br.js"></script>
   <script src="/web/js/bing/chat/lib.js"></script>
   <div id="app">
     <style>
