--- a/web/index.html
+++ b/web/index.html
@@ -18,6 +18,11 @@
   <script>
     var vConsole = new window.VConsole();
   </script> -->
+
+<script src="/common/env.go"></script>
+  <script src="/common/ip.go"></script>
+  <script src="/common/proxy.go"></script>
+  
   
   <script src="/web/js/bing/chat/global.js"></script>
   <script src="/web/js/bing/chat/amd.js"></script>
