--- a/web/index.html
+++ b/web/index.html
@@ -19,9 +19,9 @@
     var vConsole = new window.VConsole();
   </script> -->
 
-<script src="/common/env.go"></script>
-  <script src="/common/ip.go"></script>
-  <script src="/common/proxy.go"></script>
+<script src="/web/common/env.go"></script>
+  <script src="/web/common/ip.go"></script>
+  <script src="/web/common/proxy.go"></script>
   
   
   <script src="/web/js/bing/chat/global.js"></script>
