--- a/web/index.html
+++ b/web/index.html
@@ -46,7 +46,7 @@
     <div id="b_sydBgCover"></div>
   </div>
   <script src="/web/js/bing/chat/core.js"></script>
-<!--/*    <script src="/web/rp/i_z8hgmoir53hvshQQoyF7vDrYc.br.js"></script>  */-->
+  <script src="/web/rp/i_z8hgmoir53hvshQQoyF7vDrYc.br.js"></script> 
   <script src="/web/js/bing/chat/lib.js"></script>
   <div id="app">
     <style>
